feat: add row and column editing functionality